aplicação apresentada no teste técnico

--- a/APIs/conecta-mentor-backend/.env
+++ b/APIs/conecta-mentor-backend/.env
@@ -1,5 +1,5 @@
 PORT=3000
-JWT_SECRET=@Tecnologia123
+JWT_SECRET=@@Tecnologia123S
 ORACLE_USER=system
 ORACLE_PASSWORD=@Tecnologia213
 ORACLE_CONNECT_STRING=localhost:1521/XE
