--- a/projeto-next/tsconfig.json
+++ b/projeto-next/tsconfig.json
@@ -1,8 +1,11 @@
 {
   "compilerOptions": {
-    "typeRoots": ["./types", "./node_modules/@types"], //recomendação chatgpt
     "target": "ES2017",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -14,17 +17,32 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    // Recomenda-se evitar typeRoots, prefira "types"
+    "types": [
+      "next-auth"
+    ],
+    // Se realmente precisar sobrescrever os paths dos types
+    // "typeRoots": ["./types", "./node_modules/@types"],
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    },
     "plugins": [
       {
         "name": "next"
       }
-    ],
-    "paths": {
-      "@/*": ["./src/*"]
-    }
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    "next-env.d.ts",
+    "types/**/*.d.ts",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    ".next"
+  ]
 }
-
-
