--- a/projeto-next/tsconfig.json
+++ b/projeto-next/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2017",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -17,16 +13,9 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    // Recomenda-se evitar typeRoots, prefira "types"
-    "types": [
-      "next-auth"
-    ],
-    // Se realmente precisar sobrescrever os paths dos types
-    // "typeRoots": ["./types", "./node_modules/@types"],
+    "types": ["react", "react-dom", "next-auth", "node"],
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     },
     "plugins": [
       {
