--- a/projeto-next/package.json
+++ b/projeto-next/package.json
@@ -16,6 +16,7 @@
     "@fullcalendar/list": "^6.1.18",
     "@fullcalendar/react": "^6.1.18",
     "@fullcalendar/timegrid": "^6.1.18",
+    "@headlessui/react": "^2.2.6",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.12.0",
     "next": "^15.4.1",
