--- a/projeto-next/package.json
+++ b/projeto-next/package.json
@@ -19,6 +19,7 @@
     "@headlessui/react": "^2.2.6",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.12.0",
+    "firebase": "^12.0.0",
     "next": "^15.4.1",
     "next-auth": "^4.24.11",
     "prisma": "^6.12.0",
