--- a/projeto-next/package.json
+++ b/projeto-next/package.json
@@ -19,18 +19,22 @@
     "@headlessui/react": "^2.2.6",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.12.0",
+    "@react-email/components": "^0.5.0",
+    "@react-email/render": "^1.2.0",
     "firebase": "^12.0.0",
     "next": "^15.4.1",
     "next-auth": "^4.24.11",
     "prisma": "^6.12.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0"
+    "react-email": "^4.2.8",
+    "react-icons": "^5.5.0",
+    "resend": "^6.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19.1.8",
+    "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.6",
     "tailwindcss": "^4",
     "typescript": "^5"
